<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_final_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/rank_user_txt"
            android:textSize="@dimen/mid_txt"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rank_stage_txt"
            android:textSize="@dimen/mid_txt"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rank_pts_txt"
            android:textSize="@dimen/mid_txt"
            android:gravity="center"
            android:layout_marginRight="@dimen/mid_margin"
            android:textColor="@color/colorWhite"/>



    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/colorWhite"
        android:layout_margin="@dimen/mid_margin"
        >
    </View>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_rank"
        android:layout_weight="18"/>

</LinearLayout>