<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:src="@drawable/bg_test_left"
            android:scaleType="fitXY"
            android:alpha="0.4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransition"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="48dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"
                    android:scaleType="centerCrop"
                    android:paddingBottom="20dp"
                    android:src="@drawable/icon_ittalents_star"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFF"
                    app:hintTextAppearance="@style/TextHint"
                    android:background="@drawable/text_input_shape"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:hint="@string/e_mail_caps_txt"
                        android:gravity="center"
                        android:textColorHint="@color/colorWhite"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColorHint="#FFF"
                    app:hintTextAppearance="@style/TextHint"
                    app:passwordToggleEnabled="true"
                    android:background="@drawable/text_input_shape"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_caps_txt"
                        android:gravity="center"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColorHint="@color/colorWhite"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btn_signin_llSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:text="@string/sign_in_tab_caps_txt"
                    android:textColor="#FFF"
                    android:textSize="@dimen/big_txt" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent"
                    >

                    <ImageButton
                        android:id="@+id/btn_log_facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:ignore="ContentDescription"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/icon_facebook_vector"
                        />
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btn_fb_performclick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        />
                    <ImageButton
                        android:id="@+id/btn_log_google"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:ignore="ContentDescription"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/icon_google_vector"/>
                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_google_performclick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        >

                    </com.google.android.gms.common.SignInButton>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>